Refactor code structure for improved readability and maintainability

--- a/notebooks/repos.ipynb
+++ b/notebooks/repos.ipynb
@@ -65,8 +65,15 @@
    "id": "96f302fe",
    "metadata": {},
    "source": [
-    "## 🔄 Rotação de Tokens\n",
-    "Para evitar limites da API, usamos múltiplos tokens com seleção aleatória:"
+    "## 🔧 Configuração de Múltiplos Tokens GitHub\n",
+    "Este bloco configura um sistema de rotação de tokens para evitar limites da API do GitHub. A rotação aleatória distribui as requisições entre diferentes tokens, aumentando significativamente o limite de rate da API.\n",
+    "\n",
+    "**Benefícios:**\n",
+    "\n",
+    "- ✅ Evita bloqueios por rate limit\n",
+    "- ✅ Permite coleta de grandes volumes de dados\n",
+    "- ✅ Distribui carga entre múltiplas chaves de API\n",
+    "- ✅ Fallback automático em caso de token inválido"
    ]
   },
   {
@@ -89,8 +96,18 @@
    "id": "6d5f80cf",
    "metadata": {},
    "source": [
-    "## 🔧 Configuração Inicial\n",
-    "Definir as linguagens para análise e parâmetros de paginação para extração eficiente dos dados."
+    "## 🎯 Configuração de Parâmetros de Extração\n",
+    "🎯 Configuração de Parâmetros de Extração\n",
+    "Define as configurações principais para a coleta sistemática de dados:\n",
+    "**Linguagens Selecionadas**: As 10 linguagens mais populares em 2025\n",
+    "**Estratégia de Paginação**: 15 páginas × 100 repositórios = 1.500 repos por linguagem\n",
+    "**Total Estimado**: ~15.000 repositórios coletados\n",
+    "\n",
+    "**Critérios de Seleção:**\n",
+    "\n",
+    "- Repositórios ordenados por popularidade (stars)\n",
+    "- Foco em projetos ativos e relevantes\n",
+    "- Cobertura equilibrada entre diferentes linguagens"
    ]
   },
   {
@@ -111,12 +128,19 @@
    "id": "0263a6d3",
    "metadata": {},
    "source": [
-    "## 👤 Obter Informações do Dono do Repositório\n",
-    "- Acessa o perfil do dono via API\n",
+    "# 👤 Enriquecimento de Dados do Proprietário\n",
     "\n",
-    "- Trata 3 informações principais: tipo, quantidade de repositórios e localização\n",
+    "Esta função acessa o perfil completo do dono de cada repositório para extrair informações contextuais importantes:\n",
     "\n",
-    "- Implementa tratamento robusto de erros"
+    "**Dados Coletados:**\n",
+    "- **Tipo de Conta:** Usuário individual vs Organização\n",
+    "- **Portfólio:** Quantidade de repositórios públicos\n",
+    "- **Localização:** Informação geográfica declarada\n",
+    "\n",
+    "**Tratamento de Erros:**\n",
+    "- Retry automático em falhas temporárias\n",
+    "- Valores padrão para perfis inacessíveis\n",
+    "- Log detalhado de erros para debugging"
    ]
   },
   {
@@ -150,12 +174,32 @@
    "id": "9c61206c",
    "metadata": {},
    "source": [
-    "## 📈 Coletar Estatísticas do Repositório\n",
-    "- Paginação automática para contagem de contribuidores\n",
+    "# 📊 Sistema Avançado de Estatísticas de Repositório\n",
     "\n",
-    "- Filtro temporal para issues fechadas\n",
+    "Implementa coleta robusta de métricas detalhadas com paginação completa e filtros temporais:\n",
     "\n",
-    "- Delay entre requisições para evitar rate limits"
+    "## Métricas Coletadas:\n",
+    "\n",
+    "### 📈 Engajamento da Comunidade\n",
+    "- **Subscribers:** Usuários que recebem notificações (diferente de stars)\n",
+    "- **Contributors:** Desenvolvedores únicos que contribuíram\n",
+    "\n",
+    "### 🚀 Atividade de Desenvolvimento\n",
+    "- **Commits Recentes:** Atividade dos últimos 12 meses\n",
+    "- **Issues Fechadas:** Resolução de problemas nos últimos 6 meses\n",
+    "- **Pull Requests:** Total de contribuições externas\n",
+    "\n",
+    "## Melhorias Técnicas:\n",
+    "\n",
+    "### 🔄 Paginação Inteligente\n",
+    "- Coleta completa até 50 páginas por métrica\n",
+    "- Detecção automática de fim de dados\n",
+    "- Rate limiting entre páginas\n",
+    "\n",
+    "### ⏱️ Filtros Temporais\n",
+    "- Issues: Últimos 6 meses para medir atividade recente\n",
+    "- Commits: Últimos 12 meses via API de participação\n",
+    "- Delay estratégico para evitar bloqueios"
    ]
   },
   {
@@ -260,9 +304,32 @@
    "id": "009d7adb",
    "metadata": {},
    "source": [
-    "**NOVA FUNCIONALIDADE**: Salva dados após cada linguagem\n",
-    "**NOVA FUNCIONALIDADE**: Append mode para não perder dados anteriores\n",
-    "**NOVA FUNCIONALIDADE**: Backup automático\n"
+    "# 💾 Sistema de Backup e Salvamento Incremental\n",
+    "\n",
+    "**NOVA FUNCIONALIDADE CRÍTICA:** Sistema robusto de persistência de dados que previne perda de informações durante coletas longas.\n",
+    "\n",
+    "## Características Principais:\n",
+    "\n",
+    "### 🔒 Proteção Contra Perda de Dados\n",
+    "- **Backup Automático:** Arquivos existentes são preservados\n",
+    "- **Salvamento por Linguagem:** Dados salvos após cada linguagem processada\n",
+    "- **Modo Append:** Adiciona dados sem sobrescrever\n",
+    "\n",
+    "### 📁 Estrutura de Arquivos\n",
+    "- **Arquivo Principal:** `github_repos_completos.csv`\n",
+    "- **Backups Temporais:** `backup_YYYYMMDD_HHMMSS_arquivo.csv`\n",
+    "- **Backups por Linguagem:** `backup_python_repos.csv`, `backup_javascript_repos.csv`\n",
+    "\n",
+    "### 🔄 Recuperação Inteligente\n",
+    "- Detecção de coletas parciais interrompidas\n",
+    "- Continuação automática de onde parou\n",
+    "- Validação de integridade dos dados\n",
+    "\n",
+    "**Casos de Uso:**\n",
+    "- ✅ Coleta interrompida por falha de rede\n",
+    "- ✅ Rate limit atingido em linguagens específicas\n",
+    "- ✅ Interrupção manual do usuário\n",
+    "- ✅ Falhas de sistema durante processamento"
    ]
   },
   {
@@ -312,12 +379,32 @@
    "id": "c4a7ee07",
    "metadata": {},
    "source": [
-    "## 🔍 Função Principal: Busca por Linguagem\n",
-    "- Rotação automática de tokens\n",
+    "# 🔍 Motor de Coleta Principal por Linguagem\n",
     "\n",
-    "- Intervalos entre requisições\n",
+    "Função principal otimizada para coleta eficiente e resiliente de dados do GitHub.\n",
     "\n",
-    "- Consolidação em DataFrame"
+    "## Recursos Avançados:\n",
+    "\n",
+    "### 🛡️ Sistema de Retry Inteligente\n",
+    "- **3 Tentativas** por página com backoff exponencial\n",
+    "- **Detecção de Rate Limit:** Pausa automática de 2 minutos\n",
+    "- **Tratamento de Erros 422:** Detecção de páginas inexistentes\n",
+    "\n",
+    "### 📊 Monitoramento em Tempo Real\n",
+    "- Progress tracking detalhado por página e repositório\n",
+    "- Estatísticas de sucesso/falha por linguagem\n",
+    "- Estimativa de tempo restante\n",
+    "\n",
+    "### ⚡ Otimizações de Performance\n",
+    "- **Delays Estratégicos:** 2s entre repos, 5s entre páginas\n",
+    "- **Rotação de Tokens:** Distribuição de carga\n",
+    "- **Paralelização Limitada:** Evita sobrecarga da API\n",
+    "\n",
+    "## Tratamento de Casos Especiais:\n",
+    "- **Rate Limit (403):** Pausa e retry automático\n",
+    "- **Páginas Vazias:** Detecção de fim de resultados\n",
+    "- **Repositórios Privados:** Skip automático\n",
+    "- **Dados Incompletos:** Preenchimento com valores padrão"
    ]
   },
   {
@@ -404,10 +491,31 @@
    "id": "9bb2af52",
    "metadata": {},
    "source": [
-    "## 🚀 Execução e Exportação\n",
-    "- Arquivo github_repos_completos.csv com todas as linguagens\n",
+    "# 🚀 Orquestrador Principal de Execução\n",
     "\n",
-    "- Estrutura padronizada para análise"
+    "Sistema principal que coordena toda a operação de coleta com recursos enterprise-level.\n",
+    "\n",
+    "## Funcionalidades Principais:\n",
+    "\n",
+    "### 📋 Planejamento Inteligente\n",
+    "- **Detecção de Estado:** Identifica coletas parciais existentes\n",
+    "- **Continuação Automática:** Processa apenas linguagens pendentes\n",
+    "- **Estimativas Precisas:** Cálculo de tempo e volume total\n",
+    "\n",
+    "### 🔄 Gestão de Interrupções\n",
+    "- **Ctrl+C Graceful:** Salvamento seguro ao interromper\n",
+    "- **Recovery Automático:** Retoma de onde parou\n",
+    "- **Checkpoint System:** Estados intermediários preservados\n",
+    "\n",
+    "### 📊 Monitoramento Avançado\n",
+    "- **Estatísticas em Tempo Real:** Progresso por linguagem\n",
+    "- **Métricas de Performance:** Taxa de sucesso, tempo médio\n",
+    "- **Alertas de Problemas:** Rate limits, falhas de conexão\n",
+    "\n",
+    "### 💾 Relatórios Finais\n",
+    "- **Distribuição por Linguagem:** Contagem final por tecnologia\n",
+    "- **Métricas de Arquivo:** Tamanho, localização, integridade\n",
+    "- **Estatísticas de Coleta:** Sucessos, falhas, tempo total"
    ]
   },
   {
@@ -10239,33 +10347,78 @@
    "id": "636ac87c",
    "metadata": {},
    "source": [
-    "## 📋 Estrutura do Dataset (Colunas Extraídas)\n",
     "\n",
-    "| Coluna                 | Tipo de Dado | Descrição                                                                 | Exemplo                     |\n",
-    "|------------------------|--------------|---------------------------------------------------------------------------|-----------------------------|\n",
-    "| **Informações Básicas** |              |                                                                           |                             |\n",
-    "| `name`                | string       | Nome do repositório                                                      | `tensorflow`                |\n",
-    "| `owner`               | string       | Login do usuário/organização dono                                        | `google`                    |\n",
-    "| `language`            | string       | Linguagem principal do projeto                                           | `Python`                    |\n",
-    "| **Estatísticas**       |              |                                                                           |                             |\n",
-    "| `stars`               | integer      | Número de estrelas                                                       | `175000`                    |\n",
-    "| `forks`               | integer      | Número de forks                                                          | `85000`                     |\n",
-    "| `watchers_count`      | integer      | Usuários acompanhando o repositório                                      | `3200`                      |\n",
-    "| `subscribers_count`   | integer      | Inscritos no repositório (diferente de stars)                            | `1500`                      |\n",
-    "| **Atividade**          |              |                                                                           |                             |\n",
-    "| `open_issues`         | integer      | Issues abertas no momento                                                | `42`                        |\n",
-    "| `closed_issues`       | integer      | Issues fechadas nos últimos 6 meses                                      | `128`                       |\n",
-    "| `pull_requests`       | integer      | Total de PRs (abertos + fechados)                                        | `75`                        |\n",
-    "| `last_year_commits`   | integer      | Commits realizados nos últimos 12 meses                                  | `890`                       |\n",
-    "| `contributors`        | integer      | Número de contribuidores únicos                                          | `35`                        |\n",
-    "| **Metadados**          |              |                                                                           |                             |\n",
-    "| `created_at`          | datetime     | Data de criação do repositório (UTC)                                     | `2015-11-09T23:25:38Z`      |\n",
-    "| `updated_at`          | datetime     | Data da última atualização                                               | `2024-03-15T08:12:45Z`      |\n",
-    "| `size_kb`             | integer      | Tamanho aproximado do repositório em KB                                  | `10240`                     |\n",
-    "| **Informações do Dono**|              |                                                                           |                             |\n",
-    "| `owner_type`          | string       | Tipo do dono (`User` ou `Organization`)                                  | `Organization`              |\n",
-    "| `owner_public_repos`  | integer      | Quantidade de repositórios públicos do dono                              | `250`                       |\n",
-    "| `owner_location`      | string       | Localização geográfica declarada no perfil (opcional)                    | `Mountain View, California` |"
+    "# 📋 Dicionário Completo do Dataset\n",
+    "\n",
+    "## Estrutura Detalhada dos Dados Coletados\n",
+    "\n",
+    "### 🏷️ Informações Básicas do Repositório\n",
+    "| Campo | Tipo | Descrição | Exemplo |\n",
+    "|-------|------|-----------|---------|\n",
+    "| `name` | String | Nome único do repositório | `\"tensorflow\"` |\n",
+    "| `owner` | String | Username do proprietário | `\"google\"` |\n",
+    "| `language` | String | Linguagem principal detectada | `\"Python\"` |\n",
+    "\n",
+    "### ⭐ Métricas de Popularidade e Engajamento\n",
+    "| Campo | Tipo | Descrição | Exemplo |\n",
+    "|-------|------|-----------|---------|\n",
+    "| `stars` | Integer | Favoritos dos usuários | `175000` |\n",
+    "| `forks` | Integer | Cópias do repositório | `85000` |\n",
+    "| `watchers_count` | Integer | Usuários observando mudanças | `3200` |\n",
+    "| `subscribers_count` | Integer | Inscritos em notificações | `1500` |\n",
+    "\n",
+    "### 🚀 Indicadores de Atividade de Desenvolvimento\n",
+    "| Campo | Tipo | Descrição | Período | Exemplo |\n",
+    "|-------|------|-----------|---------|---------|\n",
+    "| `open_issues` | Integer | Issues não resolvidas | Atual | `42` |\n",
+    "| `closed_issues` | Integer | Issues resolvidas | 6 meses | `128` |\n",
+    "| `pull_requests` | Integer | Total de PRs | Histórico | `75` |\n",
+    "| `last_year_commits` | Integer | Commits realizados | 12 meses | `890` |\n",
+    "| `contributors` | Integer | Desenvolvedores únicos | Histórico | `35` |\n",
+    "\n",
+    "### 📅 Metadados Temporais\n",
+    "| Campo | Tipo | Descrição | Formato | Exemplo |\n",
+    "|-------|------|-----------|---------|---------|\n",
+    "| `created_at` | DateTime | Data de criação | ISO 8601 UTC | `2015-11-09T23:25:38Z` |\n",
+    "| `updated_at` | DateTime | Última modificação | ISO 8601 UTC | `2024-03-15T08:12:45Z` |\n",
+    "| `size_kb` | Integer | Tamanho do repositório | Kilobytes | `10240` |\n",
+    "\n",
+    "### 👥 Perfil do Proprietário\n",
+    "| Campo | Tipo | Descrição | Valores Possíveis | Exemplo |\n",
+    "|-------|------|-----------|-------------------|---------|\n",
+    "| `owner_type` | String | Tipo de conta | `User`, `Organization` | `\"Organization\"` |\n",
+    "| `owner_public_repos` | Integer | Repositórios públicos | 0 - ∞ | `250` |\n",
+    "| `owner_location` | String | Localização declarada | Texto livre | `\"Mountain View, CA\"` |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c61b16ce",
+   "metadata": {},
+   "source": [
+    "# 🎯 Casos de Uso e Aplicações dos Dados\n",
+    "\n",
+    "## Análises Possíveis com o Dataset:\n",
+    "\n",
+    "### 📊 Análise de Tendências Tecnológicas\n",
+    "- **Popularidade por Linguagem:** Ranking de stars e forks\n",
+    "- **Crescimento Temporal:** Evolução de projetos ao longo dos anos\n",
+    "- **Ciclo de Vida:** Correlação entre idade e atividade\n",
+    "\n",
+    "### 🌍 Geografia do Código Aberto\n",
+    "- **Mapeamento Global:** Distribuição de desenvolvedores por país\n",
+    "- **Hubs de Inovação:** Identificação de centros tecnológicos\n",
+    "- **Colaboração Internacional:** Projetos multi-regionais\n",
+    "\n",
+    "### 👥 Dinâmica de Comunidades\n",
+    "- **Padrões de Contribuição:** Relação contributors vs. atividade\n",
+    "- **Gestão de Issues:** Eficiência na resolução de problemas\n",
+    "- **Sustentabilidade:** Projetos com atividade contínua\n",
+    "\n",
+    "### 🏢 Análise Organizacional\n",
+    "- **Usuários vs. Organizações:** Diferentes padrões de desenvolvimento\n",
+    "- **Portfólio Analysis:** Organizações com múltiplos projetos populares\n",
+    "- **Estratégias Open Source:** Abordagens empresariais"
    ]
   },
   {
@@ -10273,9 +10426,23 @@
    "id": "b8a0d29c",
    "metadata": {},
    "source": [
-    "## Repositorio\n",
+    "# 🔗 Repositório e Recursos Adicionais\n",
     "\n",
-    "https://github.com/LucasjsSilva/data-set-repositorios"
+    "## 📂 Acesso ao Código Completo\n",
+    "**GitHub Repository:** https://github.com/LucasjsSilva/data-set-repositorios\n",
+    "\n",
+    "### Recursos Disponíveis:\n",
+    "- ✅ Código fonte completo e documentado\n",
+    "- ✅ Scripts de análise de dados\n",
+    "- ✅ Datasets de exemplo\n",
+    "- ✅ Jupyter notebooks com visualizações\n",
+    "- ✅ Guias de instalação e configuração\n",
+    "\n",
+    "### Como Contribuir:\n",
+    "1. **Fork** do repositório principal\n",
+    "2. **Clone** para desenvolvimento local\n",
+    "3. **Issues** para reportar bugs ou sugerir melhorias\n",
+    "4. **Pull Requests** com novas funcionalidades"
    ]
   }
  ],
