--- a/notebooks/req2.ipynb
+++ b/notebooks/req2.ipynb
@@ -5,7 +5,10 @@
    "id": "c3eeb7b3",
    "metadata": {},
    "source": [
-    "# Imports"
+    "# 📊 Construção do Dicionário de Dados\n",
+    "\n",
+    "## 🎯 Objetivo\n",
+    "Criar uma documentação estruturada e abrangente do dataset coletado, estabelecendo definições claras de cada atributo e suas características técnicas."
    ]
   },
   {
@@ -16,6 +19,21 @@
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2bd5a1b",
+   "metadata": {},
+   "source": [
+    "## 📥 Carregamento e Visão Geral do Dataset\n",
+    "\n",
+    "Primeira etapa fundamental: carregar os dados e obter uma visão panorâmica da estrutura do dataset.\n",
+    "\n",
+    "**Métricas Iniciais Capturadas:**\n",
+    "- ✅ **Dimensões do Dataset:** Quantidade de registros × colunas\n",
+    "- ✅ **Preview dos Dados:** Primeiras linhas para validação\n",
+    "- ✅ **Estrutura Geral:** Organização e formato dos dados"
    ]
   },
   {
@@ -244,7 +262,14 @@
    "id": "fc7dc9ca",
    "metadata": {},
    "source": [
-    "# Data Dictionary"
+    "## 🔍 Análise de Tipos de Dados\n",
+    "\n",
+    "Investigação detalhada dos tipos de dados presentes no dataset para classificação adequada.\n",
+    "\n",
+    "**Tipos Identificados:**\n",
+    "- **`int64`:** Valores numéricos inteiros (stars, forks, contributors)\n",
+    "- **`object`:** Strings e dados categóricos (name, owner, language)\n",
+    "- **`datetime`:** Datas e timestamps (created_at, updated_at)"
    ]
   },
   {
@@ -459,6 +484,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24134483",
+   "metadata": {},
+   "source": [
+    "## 📋 Construção do Dicionário Estruturado\n",
+    "\n",
+    "Desenvolvimento de um dicionário de dados completo e profissional seguindo padrões de documentação.\n",
+    "\n",
+    "### Estrutura do Dicionário:\n",
+    "| Campo | Descrição |\n",
+    "|-------|-----------|\n",
+    "| **Nome do Atributo** | Identificador único da coluna |\n",
+    "| **Tipo do Valor** | Tipo de dado técnico (int64, string, datetime) |\n",
+    "| **Tipo do Formato** | Classificação semântica (Numérico/Categórico) |\n",
+    "| **Descrição do Atributo** | Explicação detalhada do significado e uso |"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "cd8085cc",
@@ -474,6 +517,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a8c0ac8",
+   "metadata": {},
+   "source": [
+    "## 🏷️ Sistema de Classificação Inteligente\n",
+    "\n",
+    "Implementação de função para classificação automática dos tipos de formato baseada em regras lógicas.\n",
+    "\n",
+    "**Regras de Classificação:**\n",
+    "- **Numérico:** `int64`, `float64` → Dados quantitativos para cálculos estatísticos\n",
+    "- **Categórico:** `object`, `string` → Dados qualitativos para agrupamentos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "45e5203d",
@@ -482,6 +539,31 @@
    "source": [
     "# Apply the classification function to determine if each attribute is 'Numérico' or 'Categórico'.\n",
     "dict_df['Tipo do Formato'] = dict_df['Tipo do Valor'].apply(classify_format)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a03d0339",
+   "metadata": {},
+   "source": [
+    "## 📝 Catálogo de Descrições Detalhadas\n",
+    "\n",
+    "Documentação semântica completa de cada atributo do dataset:\n",
+    "\n",
+    "### 📊 Métricas de Popularidade\n",
+    "- **`stars`:** Indicador de aprovação da comunidade\n",
+    "- **`forks`:** Medida de interesse em contribuição\n",
+    "- **`subscribers_count`:** Engajamento ativo com notificações\n",
+    "\n",
+    "### 🚀 Indicadores de Atividade\n",
+    "- **`last_year_commits`:** Intensidade de desenvolvimento recente\n",
+    "- **`contributors`:** Diversidade da base de colaboradores\n",
+    "- **`closed_issues`:** Capacidade de resolução de problemas\n",
+    "\n",
+    "### 🏢 Informações Organizacionais\n",
+    "- **`owner_type`:** Natureza do proprietário (Individual/Corporativo)\n",
+    "- **`owner_public_repos`:** Portfólio e experiência do proprietário\n",
+    "- **`owner_location`:** Contexto geográfico do desenvolvimento"
    ]
   },
   {
@@ -514,6 +596,21 @@
     "]\n",
     "\n",
     "dict_df['Descrição do Atributo'] = descricoes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d05018d3",
+   "metadata": {},
+   "source": [
+    "## 🔧 Refinamento e Padronização de Tipos\n",
+    "\n",
+    "Processo de limpeza e padronização dos tipos de dados para consistência.\n",
+    "\n",
+    "**Melhorias Aplicadas:**\n",
+    "- ✅ **Substituição de `object` por `string`** para clareza\n",
+    "- ✅ **Identificação explícita de `datetime`** para colunas temporais\n",
+    "- ✅ **Validação de integridade** dos tipos atribuídos"
    ]
   },
   {
@@ -743,6 +840,19 @@
    ],
    "source": [
     "dict_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75c3e024",
+   "metadata": {},
+   "source": [
+    "## 💾 Exportação do Dicionário\n",
+    "\n",
+    "Persistência do dicionário de dados em formato CSV para reutilização e documentação.\n",
+    "\n",
+    "**Arquivo Gerado:** `req2.csv`\n",
+    "**Utilização:** Documentação técnica, onboarding de equipe, validação de dados"
    ]
   },
   {
