--- a/notebooks/req3.ipynb
+++ b/notebooks/req3.ipynb
@@ -6,12 +6,15 @@
         "id": "8l9mKVBkTp_P"
       },
       "source": [
-        "# Imports"
+        "# 🧹 Processo de Limpeza e Qualidade dos Dados\n",
+        "\n",
+        "## 🎯 Objetivo\n",
+        "Estabelecer um dataset confiável e consistente através de técnicas rigorosas de limpeza e validação de qualidade."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "3n327Bz4TCe1"
       },
@@ -22,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -220,7 +223,7 @@
               "4            329  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -238,21 +241,23 @@
         "id": "F_srVzStVXph"
       },
       "source": [
-        "# Data Quality Analysis"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "avp0PYZAeuXt"
-      },
-      "source": [
-        "## Missing Data"
+        "## ❌ Tratamento de Dados Ausentes (Missing Data)\n",
+        "\n",
+        "### Diagnóstico de Ausências\n",
+        "Identificação e quantificação sistemática de valores faltantes em todas as colunas.\n",
+        "\n",
+        "**Estratégias de Tratamento:**\n",
+        "- **`language`:** Exclusão de registros (dados críticos para análise)\n",
+        "- **`owner_location`:** Imputação com \"Not informed\" (dado opcional)\n",
+        "\n",
+        "### Justificativas Técnicas:\n",
+        "- **Linguagem é fundamental** para categorização e análise comparativa\n",
+        "- **Localização é complementar** e pode ser tratada como \"não informado\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -286,7 +291,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -410,7 +415,17 @@
         "id": "IUKZGsqbhGTV"
       },
       "source": [
-        "## Duplicated Data"
+        "## 🔄 Eliminação de Duplicatas\n",
+        "\n",
+        "### Detecção de Redundâncias\n",
+        "Identificação de registros completamente idênticos que podem distorcer análises estatísticas.\n",
+        "\n",
+        "**Processo:**\n",
+        "1. **Identificação:** Localização de linhas duplicadas\n",
+        "2. **Análise:** Distribuição por linguagem para entender padrões\n",
+        "3. **Remoção:** Eliminação mantendo apenas registros únicos\n",
+        "\n",
+        "**Impacto:** Redução do viés estatístico e melhoria na qualidade das análises"
       ]
     },
     {
@@ -501,7 +516,26 @@
         "id": "WY_ufM4whmNJ"
       },
       "source": [
-        "## Inconsistent Data"
+        "## 🔍 Validação de Consistência de Dados\n",
+        "\n",
+        "### Verificação de Valores Negativos\n",
+        "Auditoria de colunas numéricas para identificar valores fisicamente impossíveis ou inconsistentes.\n",
+        "\n",
+        "**Colunas Verificadas:**\n",
+        "- Métricas de popularidade (stars, forks, subscribers)\n",
+        "- Indicadores de atividade (commits, contributors, issues)\n",
+        "- Dados temporais e de tamanho\n",
+        "\n",
+        "### Validação de Formatos de Data\n",
+        "Conversão e validação de colunas temporais com tratamento de erros.\n",
+        "\n",
+        "**Processo:**\n",
+        "- Conversão para `datetime` com `errors='coerce'`\n",
+        "- Identificação de valores não convertíveis\n",
+        "- Relatório de qualidade da conversão\n",
+        "\n",
+        "### Auditoria de Dados Numéricos\n",
+        "Verificação de valores não numéricos em colunas esperadamente numéricas."
       ]
     },
     {
@@ -612,6 +646,24 @@
         "    coerced = pd.to_numeric(df[col], errors='coerce')\n",
         "    n_invalidos = coerced.isna().sum()\n",
         "    print(f\"Coluna '{col}' tem {n_invalidos} valores não numéricos\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 📊 Análise de Dados Categóricos\n",
+        "\n",
+        "### Padronização e Normalização\n",
+        "Investigação de variações e inconsistências em dados categóricos.\n",
+        "\n",
+        "**Técnicas Aplicadas:**\n",
+        "- **Normalização:** Conversão para lowercase e remoção de espaços\n",
+        "- **Contagem de Frequências:** Identificação de variações e duplicatas semânticas\n",
+        "- **Detecção de Padrões:** Análise de consistência em categorias\n",
+        "\n",
+        "### Tratamento Especial de Localizações\n",
+        "Exportação detalhada de dados de localização para análise geográfica posterior."
       ]
     },
     {
@@ -749,6 +801,22 @@
         "contagem_df.columns = ['location', 'count']\n",
         "\n",
         "contagem_df.to_csv('../dados/location_counts.csv', index=False)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 🗑️ Remoção de Colunas Redundantes\n",
+        "\n",
+        "### Otimização do Dataset\n",
+        "Eliminação de colunas com informações duplicadas ou baixo valor analítico.\n",
+        "\n",
+        "**Colunas Removidas:**\n",
+        "- **`owner_location`:** Alta cardinalidade e muitos valores faltantes\n",
+        "- **`watchers_count`:** Redundante com outras métricas de engajamento\n",
+        "\n",
+        "**Justificativa:** Simplificação do dataset mantendo informações essenciais"
       ]
     },
     {
@@ -1075,6 +1143,22 @@
         "df = df.drop(['owner_location'], axis=1)\n",
         "df = df.drop(['watchers_count'], axis=1)\n",
         "df"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 💾 Persistência do Dataset Limpo\n",
+        "\n",
+        "Exportação do dataset processado para análises subsequentes.\n",
+        "\n",
+        "**Arquivo Gerado:** `github_repos_limpo.csv`\n",
+        "**Melhorias Obtidas:**\n",
+        "- ✅ Eliminação de dados faltantes críticos\n",
+        "- ✅ Remoção de duplicatas\n",
+        "- ✅ Validação de consistência\n",
+        "- ✅ Otimização estrutural"
       ]
     },
     {
